Your descriptive message about the changes

--- a/TASTEFULBYTES.html
+++ b/TASTEFULBYTES.html
@@ -481,10 +481,10 @@
         <h2>Featured Recipes</h2>
         <div class="box">
             <div class="card">
-                <img src="pics/r1.jfif" alt="">
+                <img src="pics/r1.jfif" alt="recipe">
                 <div class="content">
                     <h3>indian thaal</h3>
-                    <P>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</P>
+                    <p>A delightful mix of traditional Indian flavors served in a vibrant, wholesome platter.</p>
                     <button>View Recipe</button>
                 </div>
             </div>
@@ -492,7 +492,8 @@
                 <img src="pics/r2.jfif" alt="">
                 <div class="content">
                     <h3>sufiyani pulo</h3>
-                    <P>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</P>
+                    <p>A royal blend of aromatic spices and tender meat, perfect for every festive feast.</p>
+
                     <button>View Recipe</button>
                 </div>
             </div>
@@ -500,7 +501,8 @@
                 <img src="pics/r3.jfif" alt="">
                 <div class="content">
                     <h3>charsi karhai</h3>
-                    <P>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</P>
+                    <p>A rustic delight bursting with bold flavors, made with tender meat and minimal spices.</p>
+
                     <button>View Recipe</button>
                 </div>
             </div>
@@ -508,7 +510,8 @@
                 <img src="pics/r4.jfif" alt="">
                 <div class="content">
                     <h3>paneer reshmi</h3>
-                    <P>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</P>
+                    <p>A creamy and velvety dish with tender paneer infused with rich, aromatic spices.</p>
+
                     <button>View Recipe</button>
                 </div>
             </div>
@@ -516,7 +519,8 @@
                 <img src="pics/r5.jfif" alt="">
                 <div class="content">
                     <h3>cheesy samosa</h3>
-                    <P>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</P>
+                    <p>A crispy golden treat bursting with gooey, melted cheese and savory spices.</p>
+
                     <button>View Recipe</button>
                 </div>
             </div>
@@ -524,7 +528,8 @@
                 <img src="pics/r6.png" alt="">
                 <div class="content">
                     <h3>bihari tikka</h3>
-                    <P>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</P>
+                    <p>Succulent, smoky skewers marinated in rich spices for an authentic Bihari flavor.</p>
+
                     <button>View Recipe</button>
                 </div>
             </div>
@@ -532,7 +537,8 @@
                 <img src="pics/r7.jfif" alt="">
                 <div class="content">
                     <h3>malai chicken kofta</h3>
-                    <P>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</P>
+                    <p>Delicate chicken koftas simmered in a creamy, spiced gravy for a melt-in-your-mouth experience.</p>
+
                     <button>View Recipe</button>
                 </div>
             </div>
